[ #2756 ] Temporary fix: All links are numbered again.
I have not documented this change in the changelog or user manual. If
no proper fix is implemented before the next version of Agda is
released, then this change should be documented.

--- a/test/LaTeXAndHTML/succeed/Issue2077-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-1.html
@@ -6,7 +6,7 @@
 
 \AgdaHide{
 Blip</a>\begin{code}
-<a id="90" class="Keyword">postulate</a> <a id="A" href="Issue2077-1.html#A" class="Postulate">A</a> <a id="102" class="Symbol">:</a> <a id="104" class="PrimitiveType">Set</a>
+<a id="90" class="Keyword">postulate</a> <a id="100" href="Issue2077-1.html#100" class="Postulate">A</a> <a id="102" class="Symbol">:</a> <a id="104" class="PrimitiveType">Set</a>
 \end{code}<a id="118" class="Comment">}Blop
 
 \end{document}
