--- a/test/LaTeXAndHTML/succeed/Issue2077-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-2.html
@@ -6,7 +6,7 @@
 
 \AgdaHide{
 </a>\begin{code}
-<a id="86" class="Keyword">postulate</a> <a id="A" href="Issue2077-2.html#A" class="Postulate">A</a> <a id="98" class="Symbol">:</a> <a id="100" class="PrimitiveType">Set</a>
+<a id="86" class="Keyword">postulate</a> <a id="96" href="Issue2077-2.html#96" class="Postulate">A</a> <a id="98" class="Symbol">:</a> <a id="100" class="PrimitiveType">Set</a>
 \end{code}<a id="114" class="Comment">}
 
 \end{document}
