--- a/test/LaTeXAndHTML/succeed/Issue2733-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2733-2.html
@@ -15,8 +15,8 @@ before the last occurrence of \AgdaPrimitiveType{Set}, which should be
 aligned with the penultimate occurrence of \AgdaPrimitiveType{Set}:
 </a>\begin{code}
   <a id="356" class="Keyword">postulate</a>
-    <a id="A" href="Issue2733-2.html#A" class="Postulate">A</a>  <a id="373" class="Symbol">:</a> <a id="375" class="PrimitiveType">Set</a>
-    <a id="B" href="Issue2733-2.html#B" class="Postulate">B</a>  <a id="386" class="Symbol">:</a> <a id="388" class="PrimitiveType">Set</a> <a id="392" class="Symbol">→</a>
+    <a id="370" href="Issue2733-2.html#370" class="Postulate">A</a>  <a id="373" class="Symbol">:</a> <a id="375" class="PrimitiveType">Set</a>
+    <a id="383" href="Issue2733-2.html#383" class="Postulate">B</a>  <a id="386" class="Symbol">:</a> <a id="388" class="PrimitiveType">Set</a> <a id="392" class="Symbol">→</a>
          <a id="403" class="PrimitiveType">Set</a>
 \end{code}<a id="417" class="Comment">
 \end{AgdaAlign}
