--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
@@ -4,16 +4,16 @@
 \begin{document}
 
 </a>\begin{code}
-<a id="74" class="Keyword">data</a> <a id="Nat" href="PatternSynonyms2.html#Nat" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
-  <a id="Nat.zero" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms2.html#Nat" class="Datatype">Nat</a>
-  <a id="Nat.suc" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms2.html#Nat" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms2.html#Nat" class="Datatype">Nat</a>
+<a id="74" class="Keyword">data</a> <a id="79" href="PatternSynonyms2.html#79" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
+  <a id="97" href="PatternSynonyms2.html#97" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms2.html#79" class="Datatype">Nat</a>
+  <a id="110" href="PatternSynonyms2.html#110" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms2.html#79" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms2.html#79" class="Datatype">Nat</a>
 
 <a id="127" class="Keyword">module</a> <a id="134" href="PatternSynonyms2.html#134" class="Module">_</a> <a id="136" class="Keyword">where</a>
 
-  <a id="145" class="Keyword">pattern</a> <a id="153" href="PatternSynonyms2.html#153" class="InductiveConstructor">two</a>   <a id="159" class="Symbol">=</a> <a id="161" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="165" class="Symbol">(</a><a id="166" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="170" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor">zero</a><a id="174" class="Symbol">)</a>
-  <a id="178" class="Keyword">pattern</a> <a id="186" href="PatternSynonyms2.html#186" class="InductiveConstructor">three</a> <a id="192" class="Symbol">=</a> <a id="194" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="198" href="PatternSynonyms2.html#153" class="InductiveConstructor">two</a>
+  <a id="145" class="Keyword">pattern</a> <a id="153" href="PatternSynonyms2.html#153" class="InductiveConstructor">two</a>   <a id="159" class="Symbol">=</a> <a id="161" href="PatternSynonyms2.html#110" class="InductiveConstructor">suc</a> <a id="165" class="Symbol">(</a><a id="166" href="PatternSynonyms2.html#110" class="InductiveConstructor">suc</a> <a id="170" href="PatternSynonyms2.html#97" class="InductiveConstructor">zero</a><a id="174" class="Symbol">)</a>
+  <a id="178" class="Keyword">pattern</a> <a id="186" href="PatternSynonyms2.html#186" class="InductiveConstructor">three</a> <a id="192" class="Symbol">=</a> <a id="194" href="PatternSynonyms2.html#110" class="InductiveConstructor">suc</a> <a id="198" href="PatternSynonyms2.html#153" class="InductiveConstructor">two</a>
 
-<a id="203" class="Keyword">data</a> <a id="Bot" href="PatternSynonyms2.html#Bot" class="Datatype">Bot</a> <a id="212" class="Symbol">:</a> <a id="214" class="PrimitiveType">Set</a> <a id="218" class="Keyword">where</a>
+<a id="203" class="Keyword">data</a> <a id="208" href="PatternSynonyms2.html#208" class="Datatype">Bot</a> <a id="212" class="Symbol">:</a> <a id="214" class="PrimitiveType">Set</a> <a id="218" class="Keyword">where</a>
 \end{code}<a id="234" class="Comment">
 
 \end{document}
