--- a/test/LaTeXAndHTML/succeed/Tag.html
+++ b/test/LaTeXAndHTML/succeed/Tag.html
@@ -8,24 +8,24 @@
 </a>\begin{code}
 <a id="88" class="Keyword">module</a> <a id="95" href="Tag.html" class="Module">Tag</a> <a id="99" class="Keyword">where</a>
 
-<a id="106" class="Keyword">module</a> <a id="Apa" href="Tag.html#Apa" class="Module">Apa</a> <a id="117" class="Keyword">where</a>
+<a id="106" class="Keyword">module</a> <a id="113" href="Tag.html#113" class="Module">Apa</a> <a id="117" class="Keyword">where</a>
 
-<a id="bepa" href="Tag.html#bepa" class="Function">bepa</a> <a id="129" class="Symbol">:</a> <a id="131" class="PrimitiveType">Set</a> <a id="135" class="Symbol">→</a> <a id="137" class="PrimitiveType">Set</a>
-<a id="141" href="Tag.html#bepa" class="Function">bepa</a> <a id="146" href="Tag.html#146" class="Bound">x</a> <a id="148" class="Symbol">=</a> <a id="150" href="Tag.html#146" class="Bound">x</a>
+<a id="124" href="Tag.html#124" class="Function">bepa</a> <a id="129" class="Symbol">:</a> <a id="131" class="PrimitiveType">Set</a> <a id="135" class="Symbol">→</a> <a id="137" class="PrimitiveType">Set</a>
+<a id="141" href="Tag.html#124" class="Function">bepa</a> <a id="146" href="Tag.html#146" class="Bound">x</a> <a id="148" class="Symbol">=</a> <a id="150" href="Tag.html#146" class="Bound">x</a>
 
-<a id="153" class="Keyword">data</a> <a id="Cepa" href="Tag.html#Cepa" class="Datatype">Cepa</a> <a id="163" class="Symbol">:</a> <a id="165" class="PrimitiveType">Set</a> <a id="169" class="Keyword">where</a>
-  <a id="Cepa.cepa" href="Tag.html#Cepa.cepa" class="InductiveConstructor">cepa</a> <a id="182" class="Symbol">:</a> <a id="184" href="Tag.html#Cepa" class="Datatype">Cepa</a>
+<a id="153" class="Keyword">data</a> <a id="158" href="Tag.html#158" class="Datatype">Cepa</a> <a id="163" class="Symbol">:</a> <a id="165" class="PrimitiveType">Set</a> <a id="169" class="Keyword">where</a>
+  <a id="177" href="Tag.html#177" class="InductiveConstructor">cepa</a> <a id="182" class="Symbol">:</a> <a id="184" href="Tag.html#158" class="Datatype">Cepa</a>
 
-<a id="190" class="Keyword">record</a> <a id="Depa" href="Tag.html#Depa" class="Record">Depa</a> <a id="202" class="Symbol">:</a> <a id="204" class="PrimitiveType">Set₁</a> <a id="209" class="Keyword">where</a>
+<a id="190" class="Keyword">record</a> <a id="197" href="Tag.html#197" class="Record">Depa</a> <a id="202" class="Symbol">:</a> <a id="204" class="PrimitiveType">Set₁</a> <a id="209" class="Keyword">where</a>
   <a id="217" class="Keyword">field</a>
-    <a id="Depa.depa" href="Tag.html#Depa.depa" class="Field">depa</a> <a id="232" class="Symbol">:</a> <a id="234" class="PrimitiveType">Set</a>
+    <a id="227" href="Tag.html#227" class="Field">depa</a> <a id="232" class="Symbol">:</a> <a id="234" class="PrimitiveType">Set</a>
 
 <a id="239" class="Keyword">postulate</a>
-  <a id="epa" href="Tag.html#epa" class="Postulate">epa</a> <a id="255" class="Symbol">:</a> <a id="257" class="PrimitiveType">Set</a>
+  <a id="251" href="Tag.html#251" class="Postulate">epa</a> <a id="255" class="Symbol">:</a> <a id="257" class="PrimitiveType">Set</a>
 
 <a id="262" class="Keyword">postulate</a>
-  <a id="α" href="Tag.html#%CE%B1" class="Postulate">α</a>   <a id="278" class="Symbol">:</a> <a id="280" class="PrimitiveType">Set</a>
-  <a id="_∘_" href="Tag.html#_%E2%88%98_" class="Postulate Operator">_∘_</a> <a id="290" class="Symbol">:</a> <a id="292" class="PrimitiveType">Set</a>
+  <a id="274" href="Tag.html#274" class="Postulate">α</a>   <a id="278" class="Symbol">:</a> <a id="280" class="PrimitiveType">Set</a>
+  <a id="286" href="Tag.html#286" class="Postulate Operator">_∘_</a> <a id="290" class="Symbol">:</a> <a id="292" class="PrimitiveType">Set</a>
 \end{code}<a id="306" class="Comment">
 
 \begin{tabular}{ll}
