--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -10,8 +10,8 @@
 </a>\begin{code}
 <a id="108" class="Keyword">postulate</a>
   
-  <a id="A" href="Trailing-whitespace.html#A" class="Postulate">A</a> <a id="125" class="Symbol">:</a> <a id="127" class="PrimitiveType">Set</a>  
-  <a id="B" href="Trailing-whitespace.html#B" class="Postulate">B</a> <a id="137" class="Symbol">:</a> <a id="139" class="PrimitiveType">Set</a>  
+  <a id="123" href="Trailing-whitespace.html#123" class="Postulate">A</a> <a id="125" class="Symbol">:</a> <a id="127" class="PrimitiveType">Set</a>  
+  <a id="135" href="Trailing-whitespace.html#135" class="Postulate">B</a> <a id="137" class="Symbol">:</a> <a id="139" class="PrimitiveType">Set</a>  
 \end{code}<a id="155" class="Comment">
 \hrule
 </a>\begin{code}
@@ -46,11 +46,11 @@
 \begin{AgdaAlign}
 </a>\begin{code}
 <a id="497" class="Keyword">postulate</a>
-  <a id="F" href="Trailing-whitespace.html#F" class="Postulate">F</a>  <a id="512" class="Symbol">:</a> <a id="514" class="PrimitiveType">Set</a> <a id="518" class="Symbol">→</a> <a id="520" class="PrimitiveType">Set</a>
-  <a id="X" href="Trailing-whitespace.html#X" class="Postulate">X</a>  <a id="529" class="Symbol">:</a> <a id="531" href="Trailing-whitespace.html#F" class="Postulate">F</a>  
+  <a id="509" href="Trailing-whitespace.html#509" class="Postulate">F</a>  <a id="512" class="Symbol">:</a> <a id="514" class="PrimitiveType">Set</a> <a id="518" class="Symbol">→</a> <a id="520" class="PrimitiveType">Set</a>
+  <a id="526" href="Trailing-whitespace.html#526" class="Postulate">X</a>  <a id="529" class="Symbol">:</a> <a id="531" href="Trailing-whitespace.html#509" class="Postulate">F</a>  
 \end{code}<a id="545" class="Comment">
 </a>\begin{code}
-          <a id="569" href="Trailing-whitespace.html#A" class="Postulate">A</a>
+          <a id="569" href="Trailing-whitespace.html#123" class="Postulate">A</a>
 \end{code}<a id="581" class="Comment">
 \end{AgdaAlign}
 \hrule
