--- a/test/LaTeXAndHTML/succeed/Indenting2.html
+++ b/test/LaTeXAndHTML/succeed/Indenting2.html
@@ -6,9 +6,9 @@
 \begin{document}
 
 </a>\begin{code}
-<a id="76" class="Keyword">data</a> <a id="Nat" href="Indenting2.html#Nat" class="Datatype">Nat</a> <a id="85" class="Symbol">:</a> <a id="87" class="PrimitiveType">Set</a> <a id="91" class="Keyword">where</a>
-  <a id="Nat.zero" href="Indenting2.html#Nat.zero" class="InductiveConstructor">zero</a>  <a id="105" class="Symbol">:</a> <a id="107" href="Indenting2.html#Nat" class="Datatype">Nat</a>
-  <a id="Nat.suc" href="Indenting2.html#Nat.suc" class="InductiveConstructor">suc</a>   <a id="119" class="Symbol">:</a> <a id="121" href="Indenting2.html#Nat" class="Datatype">Nat</a> <a id="125" class="Symbol">-&gt;</a> <a id="128" href="Indenting2.html#Nat" class="Datatype">Nat</a>
+<a id="76" class="Keyword">data</a> <a id="81" href="Indenting2.html#81" class="Datatype">Nat</a> <a id="85" class="Symbol">:</a> <a id="87" class="PrimitiveType">Set</a> <a id="91" class="Keyword">where</a>
+  <a id="99" href="Indenting2.html#99" class="InductiveConstructor">zero</a>  <a id="105" class="Symbol">:</a> <a id="107" href="Indenting2.html#81" class="Datatype">Nat</a>
+  <a id="113" href="Indenting2.html#113" class="InductiveConstructor">suc</a>   <a id="119" class="Symbol">:</a> <a id="121" href="Indenting2.html#81" class="Datatype">Nat</a> <a id="125" class="Symbol">-&gt;</a> <a id="128" href="Indenting2.html#81" class="Datatype">Nat</a>
 \end{code}<a id="142" class="Comment">
 
 \end{document}
