--- a/test/LaTeXAndHTML/succeed/Links.html
+++ b/test/LaTeXAndHTML/succeed/Links.html
@@ -7,9 +7,9 @@
 \AgdaTarget{ℕ}
 \AgdaTarget{zero}
 </a>\begin{code}
-<a id="136" class="Keyword">data</a> <a id="ℕ" href="Links.html#%E2%84%95" class="Datatype">ℕ</a> <a id="143" class="Symbol">:</a> <a id="145" class="PrimitiveType">Set</a> <a id="149" class="Keyword">where</a>
-  <a id="ℕ.zero" href="Links.html#%E2%84%95.zero" class="InductiveConstructor">zero</a>  <a id="163" class="Symbol">:</a> <a id="165" href="Links.html#%E2%84%95" class="Datatype">ℕ</a>
-  <a id="ℕ.suc" href="Links.html#%E2%84%95.suc" class="InductiveConstructor">suc</a>   <a id="175" class="Symbol">:</a> <a id="177" href="Links.html#%E2%84%95" class="Datatype">ℕ</a> <a id="179" class="Symbol">→</a> <a id="181" href="Links.html#%E2%84%95" class="Datatype">ℕ</a>
+<a id="136" class="Keyword">data</a> <a id="141" href="Links.html#141" class="Datatype">ℕ</a> <a id="143" class="Symbol">:</a> <a id="145" class="PrimitiveType">Set</a> <a id="149" class="Keyword">where</a>
+  <a id="157" href="Links.html#157" class="InductiveConstructor">zero</a>  <a id="163" class="Symbol">:</a> <a id="165" href="Links.html#141" class="Datatype">ℕ</a>
+  <a id="169" href="Links.html#169" class="InductiveConstructor">suc</a>   <a id="175" class="Symbol">:</a> <a id="177" href="Links.html#141" class="Datatype">ℕ</a> <a id="179" class="Symbol">→</a> <a id="181" href="Links.html#141" class="Datatype">ℕ</a>
 \end{code}<a id="193" class="Comment">
 
 See next page for how to define \AgdaFunction{two} (doesn&#39;t turn into a
@@ -21,8 +21,8 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
 \AgdaTarget{two}
 \hypertarget{two}{}
 </a>\begin{code}
-<a id="two" href="Links.html#two" class="Function">two</a> <a id="451" class="Symbol">:</a> <a id="453" href="Links.html#%E2%84%95" class="Datatype">ℕ</a>
-<a id="455" href="Links.html#two" class="Function">two</a> <a id="459" class="Symbol">=</a> <a id="461" href="Links.html#%E2%84%95.suc" class="InductiveConstructor">suc</a> <a id="465" class="Symbol">(</a><a id="466" href="Links.html#%E2%84%95.suc" class="InductiveConstructor">suc</a> <a id="470" href="Links.html#%E2%84%95.zero" class="InductiveConstructor">zero</a><a id="474" class="Symbol">)</a>
+<a id="447" href="Links.html#447" class="Function">two</a> <a id="451" class="Symbol">:</a> <a id="453" href="Links.html#141" class="Datatype">ℕ</a>
+<a id="455" href="Links.html#447" class="Function">two</a> <a id="459" class="Symbol">=</a> <a id="461" href="Links.html#169" class="InductiveConstructor">suc</a> <a id="465" class="Symbol">(</a><a id="466" href="Links.html#169" class="InductiveConstructor">suc</a> <a id="470" href="Links.html#157" class="InductiveConstructor">zero</a><a id="474" class="Symbol">)</a>
 \end{code}<a id="486" class="Comment">
 
 \AgdaInductiveConstructor{zero} is of type
@@ -35,8 +35,8 @@ Now that the target for \AgdaFunction{two} has been defined the link
 works automatically.
 
 </a>\begin{code}
-<a id="763" class="Keyword">data</a> <a id="Bool" href="Links.html#Bool" class="Datatype">Bool</a> <a id="773" class="Symbol">:</a> <a id="775" class="PrimitiveType">Set</a> <a id="779" class="Keyword">where</a>
-  <a id="Bool.true" href="Links.html#Bool.true" class="InductiveConstructor">true</a> <a id="Bool.false" href="Links.html#Bool.false" class="InductiveConstructor">false</a> <a id="798" class="Symbol">:</a> <a id="800" href="Links.html#Bool" class="Datatype">Bool</a>
+<a id="763" class="Keyword">data</a> <a id="768" href="Links.html#768" class="Datatype">Bool</a> <a id="773" class="Symbol">:</a> <a id="775" class="PrimitiveType">Set</a> <a id="779" class="Keyword">where</a>
+  <a id="787" href="Links.html#787" class="InductiveConstructor">true</a> <a id="792" href="Links.html#792" class="InductiveConstructor">false</a> <a id="798" class="Symbol">:</a> <a id="800" href="Links.html#768" class="Datatype">Bool</a>
 \end{code}<a id="815" class="Comment">
 
 The AgdaTarget command takes a list as input, enabling several targets
@@ -44,9 +44,9 @@ to be specified as follows:
 
 \AgdaTarget{if, then, else, if\_then\_else\_}
 </a>\begin{code}
-<a id="if_then_else_" href="Links.html#if_then_else_" class="Function Operator">if_then_else_</a> <a id="990" class="Symbol">:</a> <a id="992" class="Symbol">{</a><a id="993" href="Links.html#993" class="Bound">A</a> <a id="995" class="Symbol">:</a> <a id="997" class="PrimitiveType">Set</a><a id="1000" class="Symbol">}</a> <a id="1002" class="Symbol">→</a> <a id="1004" href="Links.html#Bool" class="Datatype">Bool</a> <a id="1009" class="Symbol">→</a> <a id="1011" href="Links.html#993" class="Bound">A</a> <a id="1013" class="Symbol">→</a> <a id="1015" href="Links.html#993" class="Bound">A</a> <a id="1017" class="Symbol">→</a> <a id="1019" href="Links.html#993" class="Bound">A</a>
-<a id="1021" href="Links.html#if_then_else_" class="Function Operator">if</a> <a id="1024" href="Links.html#Bool.true" class="InductiveConstructor">true</a> <a id="1029" href="Links.html#if_then_else_" class="Function Operator">then</a> <a id="1034" href="Links.html#1034" class="Bound">t</a> <a id="1036" href="Links.html#if_then_else_" class="Function Operator">else</a> <a id="1041" href="Links.html#1041" class="Bound">f</a> <a id="1043" class="Symbol">=</a> <a id="1045" href="Links.html#1034" class="Bound">t</a>
-<a id="1047" href="Links.html#if_then_else_" class="Function Operator">if</a> <a id="1050" href="Links.html#Bool.false" class="InductiveConstructor">false</a> <a id="1056" href="Links.html#if_then_else_" class="Function Operator">then</a> <a id="1061" href="Links.html#1061" class="Bound">t</a> <a id="1063" href="Links.html#if_then_else_" class="Function Operator">else</a> <a id="1068" href="Links.html#1068" class="Bound">f</a> <a id="1070" class="Symbol">=</a> <a id="1072" href="Links.html#1068" class="Bound">f</a>
+<a id="976" href="Links.html#976" class="Function Operator">if_then_else_</a> <a id="990" class="Symbol">:</a> <a id="992" class="Symbol">{</a><a id="993" href="Links.html#993" class="Bound">A</a> <a id="995" class="Symbol">:</a> <a id="997" class="PrimitiveType">Set</a><a id="1000" class="Symbol">}</a> <a id="1002" class="Symbol">→</a> <a id="1004" href="Links.html#768" class="Datatype">Bool</a> <a id="1009" class="Symbol">→</a> <a id="1011" href="Links.html#993" class="Bound">A</a> <a id="1013" class="Symbol">→</a> <a id="1015" href="Links.html#993" class="Bound">A</a> <a id="1017" class="Symbol">→</a> <a id="1019" href="Links.html#993" class="Bound">A</a>
+<a id="1021" href="Links.html#976" class="Function Operator">if</a> <a id="1024" href="Links.html#787" class="InductiveConstructor">true</a> <a id="1029" href="Links.html#976" class="Function Operator">then</a> <a id="1034" href="Links.html#1034" class="Bound">t</a> <a id="1036" href="Links.html#976" class="Function Operator">else</a> <a id="1041" href="Links.html#1041" class="Bound">f</a> <a id="1043" class="Symbol">=</a> <a id="1045" href="Links.html#1034" class="Bound">t</a>
+<a id="1047" href="Links.html#976" class="Function Operator">if</a> <a id="1050" href="Links.html#792" class="InductiveConstructor">false</a> <a id="1056" href="Links.html#976" class="Function Operator">then</a> <a id="1061" href="Links.html#1061" class="Bound">t</a> <a id="1063" href="Links.html#976" class="Function Operator">else</a> <a id="1068" href="Links.html#1068" class="Bound">f</a> <a id="1070" class="Symbol">=</a> <a id="1072" href="Links.html#1068" class="Bound">f</a>
 \end{code}<a id="1084" class="Comment">
 
 \newpage
