--- a/test/LaTeXAndHTML/succeed/Relative-indentation.html
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.html
@@ -7,37 +7,37 @@
 
 </a>\begin{code}
 <a id="76" class="Keyword">postulate</a>
-  <a id="A" href="Relative-indentation.html#A" class="Postulate">A</a>  <a id="B" href="Relative-indentation.html#B" class="Postulate">B</a>
-      <a id="C" href="Relative-indentation.html#C" class="Postulate">C</a> <a id="101" class="Symbol">:</a> <a id="103" class="PrimitiveType">Set</a>
+  <a id="88" href="Relative-indentation.html#88" class="Postulate">A</a>  <a id="91" href="Relative-indentation.html#91" class="Postulate">B</a>
+      <a id="99" href="Relative-indentation.html#99" class="Postulate">C</a> <a id="101" class="Symbol">:</a> <a id="103" class="PrimitiveType">Set</a>
 \end{code}<a id="117" class="Comment">
 
 </a>\begin{code}
 <a id="132" class="Keyword">postulate</a>
-  <a id="D" href="Relative-indentation.html#D" class="Postulate">D</a>  <a id="E" href="Relative-indentation.html#E" class="Postulate">E</a>
+  <a id="144" href="Relative-indentation.html#144" class="Postulate">D</a>  <a id="147" href="Relative-indentation.html#147" class="Postulate">E</a>
 
-      <a id="F" href="Relative-indentation.html#F" class="Postulate">F</a> <a id="158" class="Symbol">:</a> <a id="160" class="PrimitiveType">Set</a>
+      <a id="156" href="Relative-indentation.html#156" class="Postulate">F</a> <a id="158" class="Symbol">:</a> <a id="160" class="PrimitiveType">Set</a>
 \end{code}<a id="174" class="Comment">
 
 </a>\begin{code}
 <a id="189" class="Keyword">postulate</a>
-  <a id="G" href="Relative-indentation.html#G" class="Postulate">G</a>  <a id="H" href="Relative-indentation.html#H" class="Postulate">H</a>  <a id="207" class="Symbol">:</a> <a id="209" class="PrimitiveType">Set</a>
-  <a id="I" href="Relative-indentation.html#I" class="Postulate">I</a>
-      <a id="J" href="Relative-indentation.html#J" class="Postulate">J</a> <a id="225" class="Symbol">:</a> <a id="227" class="PrimitiveType">Set</a>
+  <a id="201" href="Relative-indentation.html#201" class="Postulate">G</a>  <a id="204" href="Relative-indentation.html#204" class="Postulate">H</a>  <a id="207" class="Symbol">:</a> <a id="209" class="PrimitiveType">Set</a>
+  <a id="215" href="Relative-indentation.html#215" class="Postulate">I</a>
+      <a id="223" href="Relative-indentation.html#223" class="Postulate">J</a> <a id="225" class="Symbol">:</a> <a id="227" class="PrimitiveType">Set</a>
 \end{code}<a id="241" class="Comment">
 
 \begin{AgdaMultiCode}
 </a>\begin{code}
 <a id="278" class="Keyword">postulate</a>
-  <a id="K" href="Relative-indentation.html#K" class="Postulate">K</a>  <a id="L" href="Relative-indentation.html#L" class="Postulate">L</a>
+  <a id="290" href="Relative-indentation.html#290" class="Postulate">K</a>  <a id="293" href="Relative-indentation.html#293" class="Postulate">L</a>
 \end{code}<a id="305" class="Comment">
 </a>\begin{code}
-      <a id="M" href="Relative-indentation.html#M" class="Postulate">M</a> <a id="327" class="Symbol">:</a> <a id="329" class="PrimitiveType">Set</a>
+      <a id="325" href="Relative-indentation.html#325" class="Postulate">M</a> <a id="327" class="Symbol">:</a> <a id="329" class="PrimitiveType">Set</a>
 \end{code}<a id="343" class="Comment">
 \end{AgdaMultiCode}
 
 </a>\begin{code}
-<a id="378" class="Keyword">record</a> <a id="R" href="Relative-indentation.html#R" class="Record">R</a> <a id="387" class="Symbol">:</a> <a id="389" class="PrimitiveType">Set₁</a> <a id="394" class="Keyword">where</a>
-  <a id="402" class="Keyword">field</a> <a id="R.N" href="Relative-indentation.html#R.N" class="Field">N</a> <a id="410" class="Symbol">:</a>
+<a id="378" class="Keyword">record</a> <a id="385" href="Relative-indentation.html#385" class="Record">R</a> <a id="387" class="Symbol">:</a> <a id="389" class="PrimitiveType">Set₁</a> <a id="394" class="Keyword">where</a>
+  <a id="402" class="Keyword">field</a> <a id="408" href="Relative-indentation.html#408" class="Field">N</a> <a id="410" class="Symbol">:</a>
             <a id="424" class="PrimitiveType">Set</a>
 \end{code}<a id="438" class="Comment">
 
@@ -59,7 +59,7 @@ text </a>\begin{code}
 
 </a>\begin{code}
 <a id="806" class="Keyword">postulate</a>
- <a id="P" href="Relative-indentation.html#P" class="Postulate">P</a> <a id="819" class="Symbol">:</a> <a id="821" class="PrimitiveType">Set</a>
+ <a id="817" href="Relative-indentation.html#817" class="Postulate">P</a> <a id="819" class="Symbol">:</a> <a id="821" class="PrimitiveType">Set</a>
 \end{code}<a id="835" class="Comment">
 
 </a>\begin{code}
@@ -95,17 +95,17 @@ text </a>\begin{code}
 \end{AgdaSuppressSpace}
 
 </a>\begin{code}
-<a id="X" href="Relative-indentation.html#X" class="Function">X</a> <a id="1290" class="Symbol">:</a> <a id="1292" class="PrimitiveType">Set₁</a>
-<a id="1297" href="Relative-indentation.html#X" class="Function">X</a> <a id="1299" class="Symbol">=</a>
+<a id="1288" href="Relative-indentation.html#1288" class="Function">X</a> <a id="1290" class="Symbol">:</a> <a id="1292" class="PrimitiveType">Set₁</a>
+<a id="1297" href="Relative-indentation.html#1288" class="Function">X</a> <a id="1299" class="Symbol">=</a>
   <a id="1303" class="PrimitiveType">Set</a>
 \end{code}<a id="1317" class="Comment">
 
 </a>\begin{code}
-<a id="Y" href="Relative-indentation.html#Y" class="Function">Y</a> <a id="1334" class="Symbol">:</a> <a id="1336" class="PrimitiveType">Set₁</a>
-<a id="1341" href="Relative-indentation.html#Y" class="Function">Y</a> <a id="1343" class="Symbol">=</a>       <a id="1351" class="PrimitiveType">Set</a>
+<a id="1332" href="Relative-indentation.html#1332" class="Function">Y</a> <a id="1334" class="Symbol">:</a> <a id="1336" class="PrimitiveType">Set₁</a>
+<a id="1341" href="Relative-indentation.html#1332" class="Function">Y</a> <a id="1343" class="Symbol">=</a>       <a id="1351" class="PrimitiveType">Set</a>
 
-<a id="Zzzzzzzzz" href="Relative-indentation.html#Zzzzzzzzz" class="Function">Zzzzzzzzz</a> <a id="1366" class="Symbol">:</a> <a id="1368" class="PrimitiveType">Set</a> <a id="1372" class="Symbol">→</a> <a id="1374" class="PrimitiveType">Set</a>
-<a id="1378" href="Relative-indentation.html#Zzzzzzzzz" class="Function">Zzzzzzzzz</a> <a id="1388" href="Relative-indentation.html#1388" class="Bound">X</a>
+<a id="1356" href="Relative-indentation.html#1356" class="Function">Zzzzzzzzz</a> <a id="1366" class="Symbol">:</a> <a id="1368" class="PrimitiveType">Set</a> <a id="1372" class="Symbol">→</a> <a id="1374" class="PrimitiveType">Set</a>
+<a id="1378" href="Relative-indentation.html#1356" class="Function">Zzzzzzzzz</a> <a id="1388" href="Relative-indentation.html#1388" class="Bound">X</a>
           <a id="1400" class="Symbol">=</a> <a id="1402" href="Relative-indentation.html#1388" class="Bound">X</a>
 \end{code}<a id="1414" class="Comment">
 
