[ html ] adding unsolved* info for toplevel module

--- a/test/LaTeXAndHTML/succeed/Issue2474.html
+++ b/test/LaTeXAndHTML/succeed/Issue2474.html
@@ -10,7 +10,7 @@
   <a id="126" href="Issue2474.html#126" class="Postulate">F</a> <a id="128" class="Symbol">:</a> <a id="130" class="Symbol">{</a><a id="131" href="Issue2474.html#131" class="Bound">_</a> <a id="133" class="Symbol">:</a> <a id="135" class="PrimitiveType">Set</a><a id="138" class="Symbol">}</a> <a id="140" class="Symbol">→</a> <a id="142" class="PrimitiveType">Set</a>
 
 <a id="147" href="Issue2474.html#147" class="Function">A</a> <a id="149" class="Symbol">:</a> <a id="151" class="PrimitiveType">Set</a>
-<a id="155" href="Issue2474.html#147" class="Function">A</a> <a id="157" class="Symbol">=</a> <a id="159" href="Issue2474.html#126" class="Postulate">F</a>
+<a id="155" href="Issue2474.html#147" class="Function">A</a> <a id="157" class="Symbol">=</a> <a id="159" href="Issue2474.html#126" class="UnsolvedMeta Postulate">F</a>
 \end{code}<a id="171" class="Comment">
 \end{document}
 </a></pre></body></html>
