Revert "[ #2756 ] Temporary fix: All links are numbered again."
This reverts commit aefd3252258d2c62e35a247cb4bcce33b0a51c79.

--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
@@ -6,7 +6,7 @@
 \begin{document}
 
 100\% postulated: </a>\begin{code}
-<a id="94" class="Keyword">postulate</a> <a id="104" href="EscapedTeXComment.html#104" class="Postulate">A</a> <a id="106" class="Symbol">:</a> <a id="108" class="PrimitiveType">Set</a>
+<a id="94" class="Keyword">postulate</a> <a id="A" href="EscapedTeXComment.html#A" class="Postulate">A</a> <a id="106" class="Symbol">:</a> <a id="108" class="PrimitiveType">Set</a>
 \end{code}<a id="122" class="Comment">
 
 \end{document}
