--- a/test/LaTeXAndHTML/succeed/Indenting4.html
+++ b/test/LaTeXAndHTML/succeed/Indenting4.html
@@ -10,8 +10,8 @@
 \end{code}<a id="110" class="Comment">
 
 </a>\begin{code}
-  <a id="127" href="Indenting4.html#127" class="Function">Pow</a> <a id="131" class="Symbol">:</a> <a id="133" class="PrimitiveType">Set</a> <a id="137" class="Symbol">→</a> <a id="139" class="PrimitiveType">Set₁</a>
-  <a id="146" href="Indenting4.html#127" class="Function">Pow</a> <a id="150" href="Indenting4.html#150" class="Bound">X</a> <a id="152" class="Symbol">=</a> <a id="154" href="Indenting4.html#150" class="Bound">X</a> <a id="156" class="Symbol">→</a> <a id="158" class="PrimitiveType">Set</a>
+  <a id="Pow" href="Indenting4.html#Pow" class="Function">Pow</a> <a id="131" class="Symbol">:</a> <a id="133" class="PrimitiveType">Set</a> <a id="137" class="Symbol">→</a> <a id="139" class="PrimitiveType">Set₁</a>
+  <a id="146" href="Indenting4.html#Pow" class="Function">Pow</a> <a id="150" href="Indenting4.html#150" class="Bound">X</a> <a id="152" class="Symbol">=</a> <a id="154" href="Indenting4.html#150" class="Bound">X</a> <a id="156" class="Symbol">→</a> <a id="158" class="PrimitiveType">Set</a>
 \end{code}<a id="172" class="Comment">
 
 \end{document}
