--- a/test/LaTeXAndHTML/succeed/Issue1241.html
+++ b/test/LaTeXAndHTML/succeed/Issue1241.html
@@ -13,7 +13,7 @@ This is the actual test.
 <a id="114" class="Keyword">module</a> <a id="121" href="Issue1241.html" class="Module">_</a> <a id="123" class="Keyword">where</a>
 
 <a id="130" class="Keyword">postulate</a>
-  <a id="142" href="Issue1241.html#142" class="Postulate">IsThisCorrectlyLaTeXed</a> <a id="165" class="Symbol">:</a> <a id="167" class="PrimitiveType">Set</a>
+  <a id="IsThisCorrectlyLaTeXed" href="Issue1241.html#IsThisCorrectlyLaTeXed" class="Postulate">IsThisCorrectlyLaTeXed</a> <a id="165" class="Symbol">:</a> <a id="167" class="PrimitiveType">Set</a>
 \end{code}<a id="181" class="Comment">
 
 \end{document}
