--- a/test/LaTeXAndHTML/succeed/Issue2536.html
+++ b/test/LaTeXAndHTML/succeed/Issue2536.html
@@ -8,8 +8,8 @@
 
 </a>\begin{code}
 <a id="89" class="Keyword">module</a> <a id="96" href="Issue2536.html" class="Module">_</a> <a id="98" class="Keyword">where</a>
-<a id="104" href="Issue2536.html#104" class="Function">id</a> <a id="107" class="Symbol">:</a> <a id="109" class="Symbol">{</a><a id="110" href="Issue2536.html#110" class="Bound">A</a> <a id="112" class="Symbol">:</a> <a id="114" class="PrimitiveType">Set</a><a id="117" class="Symbol">}</a> <a id="119" class="Symbol">→</a> <a id="121" href="Issue2536.html#110" class="Bound">A</a> <a id="123" class="Symbol">→</a> <a id="125" href="Issue2536.html#110" class="Bound">A</a>
-<a id="127" href="Issue2536.html#104" class="Function">id</a> <a id="130" href="Issue2536.html#130" class="Bound">x</a> <a id="132" class="Symbol">=</a> <a id="134" href="Issue2536.html#130" class="Bound">x</a>
+<a id="id" href="Issue2536.html#id" class="Function">id</a> <a id="107" class="Symbol">:</a> <a id="109" class="Symbol">{</a><a id="110" href="Issue2536.html#110" class="Bound">A</a> <a id="112" class="Symbol">:</a> <a id="114" class="PrimitiveType">Set</a><a id="117" class="Symbol">}</a> <a id="119" class="Symbol">→</a> <a id="121" href="Issue2536.html#110" class="Bound">A</a> <a id="123" class="Symbol">→</a> <a id="125" href="Issue2536.html#110" class="Bound">A</a>
+<a id="127" href="Issue2536.html#id" class="Function">id</a> <a id="130" href="Issue2536.html#130" class="Bound">x</a> <a id="132" class="Symbol">=</a> <a id="134" href="Issue2536.html#130" class="Bound">x</a>
 \end{code}<a id="146" class="Comment">
 
 \end{document}
