--- a/test/LaTeXAndHTML/succeed/Issue2740-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2740-1.html
@@ -9,7 +9,7 @@
 
 \noindent Beginning of line.
 </a>\begin{code}
-<a id="124" class="Keyword">postulate</a> <a id="134" href="Issue2740-1.html#134" class="Postulate">A</a> <a id="136" class="Symbol">:</a> <a id="138" class="PrimitiveType">Set</a>
+<a id="124" class="Keyword">postulate</a> <a id="A" href="Issue2740-1.html#A" class="Postulate">A</a> <a id="136" class="Symbol">:</a> <a id="138" class="PrimitiveType">Set</a>
 \end{code}<a id="152" class="Comment">
 
 \end{document}
