--- a/test/LaTeXAndHTML/succeed/Issue2744.html
+++ b/test/LaTeXAndHTML/succeed/Issue2744.html
@@ -11,10 +11,10 @@
   <a id="124" class="Keyword">postulate</a>
 \end{code}<a id="144" class="Comment">
 </a>\begin{code}
-    <a id="162" href="Issue2744.html#162" class="Postulate">A</a>    <a id="167" class="Symbol">:</a> <a id="169" class="PrimitiveType">Set</a>
+    <a id="A" href="Issue2744.html#A" class="Postulate">A</a>    <a id="167" class="Symbol">:</a> <a id="169" class="PrimitiveType">Set</a>
 \end{code}<a id="183" class="Comment">
 </a>\begin{code}
-    <a id="201" href="Issue2744.html#201" class="Postulate">BBB</a>  <a id="206" class="Symbol">:</a> <a id="208" class="PrimitiveType">Set</a>
+    <a id="BBB" href="Issue2744.html#BBB" class="Postulate">BBB</a>  <a id="206" class="Symbol">:</a> <a id="208" class="PrimitiveType">Set</a>
 \end{code}<a id="222" class="Comment">
 \end{AgdaMultiCode}
 After.
@@ -23,13 +23,13 @@ After.
 \begin{AgdaAlign}
 </a>\begin{code}
   <a id="302" class="Keyword">postulate</a>
-    <a id="316" href="Issue2744.html#316" class="Postulate">C</a> <a id="318" class="Symbol">:</a> <a id="320" class="PrimitiveType">Set</a>
+    <a id="C" href="Issue2744.html#C" class="Postulate">C</a> <a id="318" class="Symbol">:</a> <a id="320" class="PrimitiveType">Set</a>
 \end{code}<a id="334" class="Comment">
 </a>\begin{code}[hide]
-    <a id="358" href="Issue2744.html#358" class="Postulate">D</a> <a id="360" class="Symbol">:</a> <a id="362" class="PrimitiveType">Set</a>
+    <a id="D" href="Issue2744.html#D" class="Postulate">D</a> <a id="360" class="Symbol">:</a> <a id="362" class="PrimitiveType">Set</a>
 \end{code}<a id="376" class="Comment">
 </a>\begin{code}
-    <a id="394" href="Issue2744.html#394" class="Postulate">E</a> <a id="396" class="Symbol">:</a> <a id="398" class="PrimitiveType">Set</a>
+    <a id="E" href="Issue2744.html#E" class="Postulate">E</a> <a id="396" class="Symbol">:</a> <a id="398" class="PrimitiveType">Set</a>
 \end{code}<a id="412" class="Comment">
 \end{AgdaAlign}
 After.
@@ -38,19 +38,19 @@ After.
 \begin{AgdaAlign}
 </a>\begin{code}
   <a id="488" class="Keyword">postulate</a>
-    <a id="502" href="Issue2744.html#502" class="Postulate">F</a> <a id="504" class="Symbol">:</a> <a id="506" class="PrimitiveType">Set</a>
+    <a id="F" href="Issue2744.html#F" class="Postulate">F</a> <a id="504" class="Symbol">:</a> <a id="506" class="PrimitiveType">Set</a>
 \end{code}<a id="520" class="Comment">
 In between.
 \begin{AgdaSuppressSpace}
 </a>\begin{code}
   <a id="574" class="Keyword">postulate</a>
-    <a id="588" href="Issue2744.html#588" class="Postulate">G</a> <a id="590" class="Symbol">:</a> <a id="592" class="PrimitiveType">Set</a>
+    <a id="G" href="Issue2744.html#G" class="Postulate">G</a> <a id="590" class="Symbol">:</a> <a id="592" class="PrimitiveType">Set</a>
 \end{code}<a id="606" class="Comment">
 </a>\begin{code}[hide]
   <a id="628" class="Keyword">postulate</a>
 \end{code}<a id="648" class="Comment">
 </a>\begin{code}
-    <a id="666" href="Issue2744.html#666" class="Postulate">H</a> <a id="668" class="Symbol">:</a> <a id="670" class="PrimitiveType">Set</a>
+    <a id="H" href="Issue2744.html#H" class="Postulate">H</a> <a id="668" class="Symbol">:</a> <a id="670" class="PrimitiveType">Set</a>
 \end{code}<a id="684" class="Comment">
 \end{AgdaSuppressSpace}
 \end{AgdaAlign}
@@ -60,13 +60,13 @@ After.
 \begin{AgdaMultiCode}
 </a>\begin{code}
   <a id="788" class="Keyword">postulate</a>
-    <a id="802" href="Issue2744.html#802" class="Postulate Operator">!_!</a>    <a id="809" class="Symbol">:</a> <a id="811" class="PrimitiveType">Set</a> <a id="815" class="Symbol">→</a> <a id="817" class="PrimitiveType">Set</a>
+    <a id="!_!" href="Issue2744.html#%21_%21" class="Postulate Operator">!_!</a>    <a id="809" class="Symbol">:</a> <a id="811" class="PrimitiveType">Set</a> <a id="815" class="Symbol">→</a> <a id="817" class="PrimitiveType">Set</a>
 \end{code}<a id="831" class="Comment">
 </a>\begin{code}[hide]
   <a id="853" class="Keyword">postulate</a>
 \end{code}<a id="873" class="Comment">
 </a>\begin{code}
-    <a id="891" href="Issue2744.html#891" class="Postulate Operator">&lt;!_!&gt;</a>  <a id="898" class="Symbol">:</a> <a id="900" class="PrimitiveType">Set</a> <a id="904" class="Symbol">→</a> <a id="906" class="PrimitiveType">Set</a>
+    <a id="&lt;!_!&gt;" href="Issue2744.html#%3C%21_%21%3E" class="Postulate Operator">&lt;!_!&gt;</a>  <a id="898" class="Symbol">:</a> <a id="900" class="PrimitiveType">Set</a> <a id="904" class="Symbol">→</a> <a id="906" class="PrimitiveType">Set</a>
 \end{code}<a id="920" class="Comment">
 \end{AgdaMultiCode}
 After.
