--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.html
@@ -4,14 +4,14 @@
 \begin{document}
 
 </a>\begin{code}
-<a id="74" class="Keyword">data</a> <a id="79" href="PatternSynonyms.html#79" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
-  <a id="97" href="PatternSynonyms.html#97" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms.html#79" class="Datatype">Nat</a>
-  <a id="110" href="PatternSynonyms.html#110" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms.html#79" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms.html#79" class="Datatype">Nat</a>
+<a id="74" class="Keyword">data</a> <a id="Nat" href="PatternSynonyms.html#Nat" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
+  <a id="Nat.zero" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms.html#Nat" class="Datatype">Nat</a>
+  <a id="Nat.suc" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms.html#Nat" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms.html#Nat" class="Datatype">Nat</a>
 
-<a id="127" class="Keyword">pattern</a> <a id="135" href="PatternSynonyms.html#135" class="InductiveConstructor">two</a>   <a id="141" class="Symbol">=</a> <a id="143" href="PatternSynonyms.html#110" class="InductiveConstructor">suc</a> <a id="147" class="Symbol">(</a><a id="148" href="PatternSynonyms.html#110" class="InductiveConstructor">suc</a> <a id="152" href="PatternSynonyms.html#97" class="InductiveConstructor">zero</a><a id="156" class="Symbol">)</a>
-<a id="158" class="Keyword">pattern</a> <a id="166" href="PatternSynonyms.html#166" class="InductiveConstructor">three</a> <a id="172" class="Symbol">=</a> <a id="174" href="PatternSynonyms.html#110" class="InductiveConstructor">suc</a> <a id="178" href="PatternSynonyms.html#135" class="InductiveConstructor">two</a>
+<a id="127" class="Keyword">pattern</a> <a id="two" href="PatternSynonyms.html#two" class="InductiveConstructor">two</a>   <a id="141" class="Symbol">=</a> <a id="143" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="147" class="Symbol">(</a><a id="148" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="152" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor">zero</a><a id="156" class="Symbol">)</a>
+<a id="158" class="Keyword">pattern</a> <a id="three" href="PatternSynonyms.html#three" class="InductiveConstructor">three</a> <a id="172" class="Symbol">=</a> <a id="174" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="178" href="PatternSynonyms.html#two" class="InductiveConstructor">two</a>
 
-<a id="183" class="Keyword">data</a> <a id="188" href="PatternSynonyms.html#188" class="Datatype">Bot</a> <a id="192" class="Symbol">:</a> <a id="194" class="PrimitiveType">Set</a> <a id="198" class="Keyword">where</a>
+<a id="183" class="Keyword">data</a> <a id="Bot" href="PatternSynonyms.html#Bot" class="Datatype">Bot</a> <a id="192" class="Symbol">:</a> <a id="194" class="PrimitiveType">Set</a> <a id="198" class="Keyword">where</a>
 \end{code}<a id="214" class="Comment">
 
 \end{document}
