--- a/test/LaTeXAndHTML/succeed/UnicodeInput.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.html
@@ -4,10 +4,10 @@
 \begin{document}
 
 </a>\begin{code}
-<a id="74" class="Keyword">data</a> <a id="79" href="UnicodeInput.html#79" class="Datatype">αβγδεζθικλμνξρστυφχψω</a> <a id="101" class="Symbol">:</a> <a id="103" class="PrimitiveType">Set₁</a> <a id="108" class="Keyword">where</a>
+<a id="74" class="Keyword">data</a> <a id="αβγδεζθικλμνξρστυφχψω" href="UnicodeInput.html#%CE%B1%CE%B2%CE%B3%CE%B4%CE%B5%CE%B6%CE%B8%CE%B9%CE%BA%CE%BB%CE%BC%CE%BD%CE%BE%CF%81%CF%83%CF%84%CF%85%CF%86%CF%87%CF%88%CF%89" class="Datatype">αβγδεζθικλμνξρστυφχψω</a> <a id="101" class="Symbol">:</a> <a id="103" class="PrimitiveType">Set₁</a> <a id="108" class="Keyword">where</a>
 
 <a id="115" class="Keyword">postulate</a>
-  <a id="127" href="UnicodeInput.html#127" class="Postulate">→⇒⇛⇉⇄↦⇨↠⇀⇁</a> <a id="138" class="Symbol">:</a> <a id="140" class="PrimitiveType">Set</a>
+  <a id="→⇒⇛⇉⇄↦⇨↠⇀⇁" href="UnicodeInput.html#%E2%86%92%E2%87%92%E2%87%9B%E2%87%89%E2%87%84%E2%86%A6%E2%87%A8%E2%86%A0%E2%87%80%E2%87%81" class="Postulate">→⇒⇛⇉⇄↦⇨↠⇀⇁</a> <a id="138" class="Symbol">:</a> <a id="140" class="PrimitiveType">Set</a>
 \end{code}<a id="154" class="Comment">
 
 \[
