--- a/test/LaTeXAndHTML/succeed/Indenting5.html
+++ b/test/LaTeXAndHTML/succeed/Indenting5.html
@@ -6,13 +6,13 @@
 \begin{document}
 
 </a>\begin{code}
-<a id="76" class="Keyword">record</a> <a id="83" href="Indenting5.html#83" class="Record">Sigma</a> <a id="89" class="Symbol">(</a><a id="90" href="Indenting5.html#90" class="Bound">A</a> <a id="92" class="Symbol">:</a> <a id="94" class="PrimitiveType">Set</a><a id="97" class="Symbol">)</a> <a id="99" class="Symbol">(</a><a id="100" href="Indenting5.html#100" class="Bound">B</a> <a id="102" class="Symbol">:</a> <a id="104" href="Indenting5.html#90" class="Bound">A</a> <a id="106" class="Symbol">→</a> <a id="108" class="PrimitiveType">Set</a><a id="111" class="Symbol">)</a> <a id="113" class="Symbol">:</a> <a id="115" class="PrimitiveType">Set</a> <a id="119" class="Keyword">where</a>
-  <a id="127" class="Keyword">constructor</a> <a id="139" href="Indenting5.html#139" class="InductiveConstructor Operator">_,_</a>
+<a id="76" class="Keyword">record</a> <a id="Sigma" href="Indenting5.html#Sigma" class="Record">Sigma</a> <a id="89" class="Symbol">(</a><a id="90" href="Indenting5.html#90" class="Bound">A</a> <a id="92" class="Symbol">:</a> <a id="94" class="PrimitiveType">Set</a><a id="97" class="Symbol">)</a> <a id="99" class="Symbol">(</a><a id="100" href="Indenting5.html#100" class="Bound">B</a> <a id="102" class="Symbol">:</a> <a id="104" href="Indenting5.html#90" class="Bound">A</a> <a id="106" class="Symbol">→</a> <a id="108" class="PrimitiveType">Set</a><a id="111" class="Symbol">)</a> <a id="113" class="Symbol">:</a> <a id="115" class="PrimitiveType">Set</a> <a id="119" class="Keyword">where</a>
+  <a id="127" class="Keyword">constructor</a> <a id="Sigma._,_" href="Indenting5.html#Sigma._%2C_" class="InductiveConstructor Operator">_,_</a>
   <a id="145" class="Keyword">field</a>
-    <a id="155" href="Indenting5.html#155" class="Field">proj₁</a> <a id="161" class="Symbol">:</a> <a id="163" href="Indenting5.html#90" class="Bound">A</a>
-    <a id="169" href="Indenting5.html#169" class="Field">proj₂</a> <a id="175" class="Symbol">:</a> <a id="177" href="Indenting5.html#100" class="Bound">B</a> <a id="179" href="Indenting5.html#155" class="Field">proj₁</a>
+    <a id="Sigma.proj₁" href="Indenting5.html#Sigma.proj%E2%82%81" class="Field">proj₁</a> <a id="161" class="Symbol">:</a> <a id="163" href="Indenting5.html#90" class="Bound">A</a>
+    <a id="Sigma.proj₂" href="Indenting5.html#Sigma.proj%E2%82%82" class="Field">proj₂</a> <a id="175" class="Symbol">:</a> <a id="177" href="Indenting5.html#100" class="Bound">B</a> <a id="179" href="Indenting5.html#Sigma.proj%E2%82%81" class="Field">proj₁</a>
 
-<a id="186" class="Keyword">open</a> <a id="191" href="Indenting5.html#83" class="Module">Sigma</a> <a id="197" class="Keyword">public</a>
+<a id="186" class="Keyword">open</a> <a id="191" href="Indenting5.html#Sigma" class="Module">Sigma</a> <a id="197" class="Keyword">public</a>
 \end{code}<a id="214" class="Comment">
 
 \end{document}
