--- a/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
@@ -3,11 +3,11 @@
 </a>::
   <a id="9" class="Keyword">module</a> <a id="16" href="RsTQuotedDelim.html" class="Module">RsTQuotedDelim</a> <a id="31" class="Keyword">where</a>
 
-       <a id="45" class="Keyword">data</a> <a id="50" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a> <a id="55" class="Symbol">:</a> <a id="57" class="PrimitiveType">Set</a> <a id="61" class="Keyword">where</a>
-        <a id="75" href="RsTQuotedDelim.html#75" class="InductiveConstructor">true</a> <a id="80" class="Symbol">:</a> <a id="82" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
-        <a id="95" href="RsTQuotedDelim.html#95" class="InductiveConstructor">false</a> <a id="101" class="Symbol">:</a> <a id="103" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
-        <a id="116" href="RsTQuotedDelim.html#116" class="InductiveConstructor">dunno</a> <a id="122" class="Symbol">:</a> <a id="124" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
-        <a id="137" href="RsTQuotedDelim.html#137" class="InductiveConstructor">aa</a> <a id="140" class="Symbol">:</a> <a id="142" class="Comment">{- :: -}</a> <a id="151" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
+       <a id="45" class="Keyword">data</a> <a id="Bool" href="RsTQuotedDelim.html#Bool" class="Datatype">Bool</a> <a id="55" class="Symbol">:</a> <a id="57" class="PrimitiveType">Set</a> <a id="61" class="Keyword">where</a>
+        <a id="Bool.true" href="RsTQuotedDelim.html#Bool.true" class="InductiveConstructor">true</a> <a id="80" class="Symbol">:</a> <a id="82" href="RsTQuotedDelim.html#Bool" class="Datatype">Bool</a>
+        <a id="Bool.false" href="RsTQuotedDelim.html#Bool.false" class="InductiveConstructor">false</a> <a id="101" class="Symbol">:</a> <a id="103" href="RsTQuotedDelim.html#Bool" class="Datatype">Bool</a>
+        <a id="Bool.dunno" href="RsTQuotedDelim.html#Bool.dunno" class="InductiveConstructor">dunno</a> <a id="122" class="Symbol">:</a> <a id="124" href="RsTQuotedDelim.html#Bool" class="Datatype">Bool</a>
+        <a id="Bool.aa" href="RsTQuotedDelim.html#Bool.aa" class="InductiveConstructor">aa</a> <a id="140" class="Symbol">:</a> <a id="142" class="Comment">{- :: -}</a> <a id="151" href="RsTQuotedDelim.html#Bool" class="Datatype">Bool</a>
 
 <a id="157" class="Comment">blip :: blop
 
