--- a/test/LaTeXAndHTML/succeed/TrailingColon.html
+++ b/test/LaTeXAndHTML/succeed/TrailingColon.html
@@ -7,27 +7,27 @@ aaa
 </a>  ::
     <a id="26" class="Keyword">module</a> <a id="33" href="TrailingColon.html" class="Module">TrailingColon</a> <a id="47" class="Keyword">where</a>
 
-        <a id="62" class="Keyword">data</a> <a id="67" href="TrailingColon.html#67" class="Datatype">Bool</a> <a id="72" class="Symbol">:</a> <a id="74" class="PrimitiveType">Set</a> <a id="78" class="Keyword">where</a>
-            <a id="96" href="TrailingColon.html#96" class="InductiveConstructor">true</a> <a id="101" class="Symbol">:</a> <a id="103" href="TrailingColon.html#67" class="Datatype">Bool</a>
-            <a id="120" href="TrailingColon.html#120" class="InductiveConstructor">false</a> <a id="126" class="Symbol">:</a> <a id="128" href="TrailingColon.html#67" class="Datatype">Bool</a>
-            <a id="145" href="TrailingColon.html#145" class="InductiveConstructor">aa</a> <a id="148" class="Symbol">:</a> <a id="150" href="TrailingColon.html#67" class="Datatype">Bool</a>
+        <a id="62" class="Keyword">data</a> <a id="Bool" href="TrailingColon.html#Bool" class="Datatype">Bool</a> <a id="72" class="Symbol">:</a> <a id="74" class="PrimitiveType">Set</a> <a id="78" class="Keyword">where</a>
+            <a id="Bool.true" href="TrailingColon.html#Bool.true" class="InductiveConstructor">true</a> <a id="101" class="Symbol">:</a> <a id="103" href="TrailingColon.html#Bool" class="Datatype">Bool</a>
+            <a id="Bool.false" href="TrailingColon.html#Bool.false" class="InductiveConstructor">false</a> <a id="126" class="Symbol">:</a> <a id="128" href="TrailingColon.html#Bool" class="Datatype">Bool</a>
+            <a id="Bool.aa" href="TrailingColon.html#Bool.aa" class="InductiveConstructor">aa</a> <a id="148" class="Symbol">:</a> <a id="150" href="TrailingColon.html#Bool" class="Datatype">Bool</a>
 
-        <a id="164" href="TrailingColon.html#164" class="Function">a</a> <a id="166" class="Symbol">:</a> <a id="168" href="TrailingColon.html#67" class="Datatype">Bool</a>
-        <a id="181" href="TrailingColon.html#164" class="Function">a</a> <a id="183" class="Symbol">=</a> <a id="185" href="TrailingColon.html#96" class="InductiveConstructor">true</a>
+        <a id="a" href="TrailingColon.html#a" class="Function">a</a> <a id="166" class="Symbol">:</a> <a id="168" href="TrailingColon.html#Bool" class="Datatype">Bool</a>
+        <a id="181" href="TrailingColon.html#a" class="Function">a</a> <a id="183" class="Symbol">=</a> <a id="185" href="TrailingColon.html#Bool.true" class="InductiveConstructor">true</a>
 
 <a id="191" class="Comment">Tomate
 bleh
 bli
 
 </a>::
-        <a id="219" href="TrailingColon.html#219" class="Function">b</a> <a id="221" class="Symbol">:</a> <a id="223" href="TrailingColon.html#67" class="Datatype">Bool</a>
-        <a id="236" href="TrailingColon.html#219" class="Function">b</a> <a id="238" class="Symbol">=</a> <a id="240" href="TrailingColon.html#120" class="InductiveConstructor">false</a>
+        <a id="b" href="TrailingColon.html#b" class="Function">b</a> <a id="221" class="Symbol">:</a> <a id="223" href="TrailingColon.html#Bool" class="Datatype">Bool</a>
+        <a id="236" href="TrailingColon.html#b" class="Function">b</a> <a id="238" class="Symbol">=</a> <a id="240" href="TrailingColon.html#Bool.false" class="InductiveConstructor">false</a>
 
 
 <a id="248" class="Comment">for example:</a>:
 
-        <a id="271" href="TrailingColon.html#271" class="Function">c</a> <a id="273" class="Symbol">:</a> <a id="275" href="TrailingColon.html#67" class="Datatype">Bool</a>
-        <a id="288" href="TrailingColon.html#271" class="Function">c</a> <a id="290" class="Symbol">=</a> <a id="292" href="TrailingColon.html#145" class="InductiveConstructor">aa</a>
+        <a id="c" href="TrailingColon.html#c" class="Function">c</a> <a id="273" class="Symbol">:</a> <a id="275" href="TrailingColon.html#Bool" class="Datatype">Bool</a>
+        <a id="288" href="TrailingColon.html#c" class="Function">c</a> <a id="290" class="Symbol">=</a> <a id="292" href="TrailingColon.html#Bool.aa" class="InductiveConstructor">aa</a>
 
 <a id="296" class="Comment">and that&#39;s all, folks
 </a></pre></body></html>
